feat: modify the root url to show project links.

--- a/iot-server/views/index.jade
+++ b/iot-server/views/index.jade
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  a(class="collection-item" href="/uvindex?zip=85719") Show current UV in 85719 <br>
+  a(class="collection-item" href="inputrecord.html") Input UV Record manually (For Debug) <br>
+  a(class="collection-item" href="/create/status/all") View all record in JSON (For Debug) <br>
