feat: change route "/create" to "/record/create".

--- a/iot-server/views/index.jade
+++ b/iot-server/views/index.jade
@@ -5,4 +5,4 @@ block content
   p Welcome to #{title}
   a(class="collection-item" href="/uvindex?zip=85719") Show current UV in 85719 (via weatherbit in JSON)<br>
   a(class="collection-item" href="inputrecord.html") Input UV Record manually (For Debug) <br>
-  a(class="collection-item" href="/create/status/all") View all record in JSON (For Debug) <br>
+  a(class="collection-item" href="/record/all") View all record in JSON (For Debug) <br>
