feat: add an endpoint to perform the edit deviceId function.
endpoint: "device/edit"

--- a/iot-server/public/stylesheets/homestyle.css
+++ b/iot-server/public/stylesheets/homestyle.css
@@ -1,4 +1,4 @@
-#addDeviceForm, #confirmEditUserInfo, #error {
+#addDeviceForm, #confirmEditUserInfo, #error, .edit-device-id {
    display: none;
 }
 
