feat: only allow the email verified user to add a new device.

--- a/iot-server/public/stylesheets/homestyle.css
+++ b/iot-server/public/stylesheets/homestyle.css
@@ -1,4 +1,4 @@
-#addDeviceForm, #confirmEditUserInfo, #error, .edit-device-id {
+#addDeviceForm, #confirmEditUserInfo, #error, #addDevice, #verifyEmailNotice, .edit-device-id {
    display: none;
 }
 
