--- a/iot-server/public/stylesheets/info.css
+++ b/iot-server/public/stylesheets/info.css
@@ -1,7 +1,7 @@
-.table-orange, .table-orange>td, .table-orange>th {
+.table-orange, .table-orange>td, .table-orange>th, .alert-orange {
 	background-color: orange;
 }
 
-.table-orchid, .table-orchid>td, .table-orchid>th {
+.table-orchid, .table-orchid>td, .table-orchid>th, .alert-orchid {
 	background-color: orchid;
 }
